@@ -20,12 +20,12 @@ name: Time-y2038
 provides:
   Time::y2038:
     file: lib/Time/y2038.pm
-    version: 20100223
+    version: 20100225
   Time::y2038::Everywhere:
     file: lib/Time/y2038/Everywhere.pm
-    version: 20100223
+    version: 20100225
 requires:
   perl: v5.6.1
 resources:
   license: http://dev.perl.org/licenses/
-version: 20100223
+version: 20100225
