@@ -1,3 +1,12 @@
+20100225  Thu Feb 25 23:09:15 PST 2010
+  Bugs
+  * Accidentally left a debugging print in mktime()
+
+  Tests
+  * Test against 2006, before the American DST rules changed, so
+    as not to break on old machines.
+
+
 20100223  Tue Feb 23 11:57:23 PST 2010
   Build
   * Fix for JSON.pm not being available for Build.PL
